--- a/src/css/navbar.module.css
+++ b/src/css/navbar.module.css
@@ -1,13 +1,27 @@
 .header {
-  padding: 20px;
+  padding: 2rem 3rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: var(--primaryColor);
+  background-color: var(--mainWhite);
   color: var(--offWhite);
+  position: relative;
 }
 
-.header a {
+.header .link {
   margin: 0 10px;
-  color: var(--offWhite);
+  font-size: 1.25rem;
+}
+
+.header::after {
+  content: "";
+  background-image: url("../images/drip.svg");
+  background-repeat: repeat-x;
+  position: absolute;
+  z-index: 2;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  transform: translateY(90%);
 }
