--- a/src/css/navbar.module.css
+++ b/src/css/navbar.module.css
@@ -1,4 +1,5 @@
 .header {
+  height: 12vh;
   padding: 2rem 3rem;
   display: flex;
   align-items: center;
@@ -8,9 +9,18 @@
   position: relative;
 }
 
+.header.animate {
+  animation: wipe 1s none ease-in-out;
+}
+
 .header .link {
   margin: 0 10px;
   font-size: 1.25rem;
+}
+
+.header .link.animate,
+.header h1.animate {
+  animation: appear 1s none step-end;
 }
 
 .header::after {
@@ -24,4 +34,26 @@
   width: 100%;
   height: 70px;
   transform: translateY(90%);
+}
+
+@keyframes wipe {
+  0% {
+    height: 100vh;
+  }
+  80% {
+    height: 10vh;
+  }
+  100% {
+    height: 12vh;
+  }
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
