--- a/src/css/navbar.module.css
+++ b/src/css/navbar.module.css
@@ -7,25 +7,30 @@
   background-color: var(--mainWhite);
   color: var(--offWhite);
   position: relative;
+  margin-bottom: 5rem;
 }
 
-.header.animate {
-  animation: wipe 1s none ease-in-out;
+.header.home {
+  /* height: 50vh;
+  animation: wipe 1s none ease-in-out; */
+  display: none;
 }
 
 .header .link {
   margin: 0 10px;
   font-size: 1.25rem;
+  font-weight: 700;
 }
 
-.header .link.animate,
-.header h1.animate {
-  animation: appear 1s none step-end;
+.header .link.home,
+.header h1.home {
+  /* animation: appear 1s none step-end; */
+  display: none;
 }
 
 .header::after {
   content: "";
-  background-image: url("../images/drip.svg");
+  background-image: url("../images/drip3.svg");
   background-repeat: repeat-x;
   position: absolute;
   z-index: 2;
@@ -41,10 +46,10 @@
     height: 100vh;
   }
   80% {
-    height: 10vh;
+    height: 35vh;
   }
   100% {
-    height: 12vh;
+    height: 40vh;
   }
 }
 
