--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -31,12 +31,17 @@ body {
   font-family: Lato, sans-serif;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 h1,
 h2,
 h3,
 h4,
-h5,
-h6 {
+h5 {
   font-family: "Lobster", sans-serif;
 }
 
