--- a/src/css/about.module.css
+++ b/src/css/about.module.css
@@ -39,13 +39,14 @@
 
 .about article p {
   position: relative;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
+  line-height: 1.5rem;
   z-index: 1;
 }
 
 .about article .mainImg {
+  min-width: 200px;
   height: 200px;
-  width: 200px;
   object-fit: cover;
   border-radius: 250px;
   margin: 0 3rem;
@@ -85,6 +86,7 @@
 
   .about article .mainImg {
     height: 150px;
-    width: 150px;
+    min-width: 150px;
+    margin-bottom: 1rem;
   }
 }
