--- a/src/css/contact.module.css
+++ b/src/css/contact.module.css
@@ -4,12 +4,49 @@
   margin: 0 auto;
 }
 
-.contact form {
+.contact-content {
+  max-width: 575px;
+  margin: 1rem auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  background: var(--mainWhite);
+  text-align: left;
+  box-shadow: 4px 6px 13px -5px rgba(0, 0, 0, 0.75);
 }
 
-.contact input {
-  display: block;
+.contact-info {
+  padding: 1rem;
+}
+
+.contact-info h6 {
+  margin-bottom: 0.25rem;
+  color: var(--darkGrey);
+}
+
+.contact-info p {
+  margin-bottom: 1rem;
+}
+
+.social-media {
+  margin-top: 0.5rem;
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+}
+
+svg {
+  cursor: pointer;
+}
+
+iframe {
+  min-height: 100%;
+}
+
+@media (max-width: 576px) {
+  .contact-content {
+    flex-direction: column;
+  }
+  iframe {
+    min-height: 300px;
+  }
 }
