--- a/src/css/flavor.module.css
+++ b/src/css/flavor.module.css
@@ -19,7 +19,7 @@
 .flavors-page .top p {
   z-index: 1;
   position: relative;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
 }
 
 .flavors-page .top img {
@@ -37,7 +37,7 @@
   grid-column-gap: 5rem;
   grid-row-gap: 3rem;
   margin: 0 auto;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .flavor-card {
@@ -105,6 +105,7 @@
 
 .flavor-card-icons {
   color: inherit;
+  transition: inherit;
 }
 
 .flavor-card h2 {
