--- a/src/css/navbar.module.css
+++ b/src/css/navbar.module.css
@@ -20,11 +20,15 @@
   margin: 0 10px;
   font-size: 1.25rem;
   font-weight: 700;
+  padding: 0.125rem 0;
+}
+
+.header .link.active {
+  border-bottom: 3px solid var(--primaryColor);
 }
 
 .header .link.home,
 .header h1.home {
-  /* animation: appear 1s none step-end; */
   display: none;
 }
 
@@ -39,6 +43,53 @@
   width: 100%;
   height: 70px;
   transform: translateY(90%);
+}
+
+.burger {
+  color: var(--primaryColor);
+  font-size: 3rem;
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    height: auto;
+    padding: 1rem 3rem;
+    text-align: center;
+  }
+  h1 {
+    margin-bottom: 1rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .header {
+    padding: 1rem 0;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  h1 {
+    flex-basis: 70%;
+  }
+  .burger {
+    display: block;
+    flex-basis: 30%;
+  }
+  .header .link.active {
+    border: none;
+  }
+  nav {
+    display: flex;
+    flex-direction: column;
+  }
+  .navOpen {
+    display: flex;
+  }
+  .navClosed {
+    display: none;
+  }
 }
 
 @keyframes wipe {
