--- a/src/css/about.module.css
+++ b/src/css/about.module.css
@@ -54,10 +54,11 @@
   z-index: 1;
 }
 
-.about article .bgImg {
+.bgImg {
+  object-fit: fill;
   position: absolute;
-  width: 100%;
-  min-height: 100%;
+  height: 100%;
+  max-width: 100%;
   top: 0;
   left: 0;
 }
