--- a/src/css/home-info.module.css
+++ b/src/css/home-info.module.css
@@ -4,7 +4,6 @@
   display: flex;
   justify-content: space-around;
   flex-direction: column;
-  /* align-items: center; */
   color: var(--primaryColor);
 }
 
@@ -25,7 +24,6 @@
   align-self: flex-end;
   text-align: right;
   letter-spacing: 1px;
-  /* border: 2px solid var(--mainWhite); */
 }
 
 .home-info article:nth-child(2n) {
@@ -33,11 +31,6 @@
   flex-direction: row;
   text-align: left;
 }
-
-/* .gatsby-image-wrapper picture img {
-  object-fit: contain;
-  object-position: left;
-} */
 
 .home-info .about-img,
 .home-info .contact-img {
@@ -91,7 +84,9 @@
     padding: 0;
   }
 
-  .home-info img {
+  .about-img,
+  .contact-img,
+  .flavors-img {
     margin-bottom: 1rem;
   }
 }
