--- a/src/css/flavor.module.css
+++ b/src/css/flavor.module.css
@@ -14,6 +14,8 @@
   width: 70%;
   position: relative;
   padding: 4rem;
+  background: url("../../static/img/shape.svg");
+  background-size: 100% 100%;
 }
 
 .flavors-page .top p {
