--- a/src/css/about.module.css
+++ b/src/css/about.module.css
@@ -16,7 +16,7 @@
   margin: 0 auto 2rem;
   padding: 4rem;
   text-align: right;
-  background: url("../../static/img/shape.svg");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='800' height='210' %3E%3Cpath fill-rule='evenodd' fill='rgb(255, 255, 255)' d='M375.500,1.000 C558.030,1.000 806.259,-9.452 781.000,116.000 C762.488,207.944 546.861,185.946 438.000,195.000 C140.149,219.773 -13.071,219.045 2.000,117.000 C18.668,4.142 192.970,1.000 375.500,1.000 Z'/%3E%3C/svg%3E");
   background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
