fix styling issues

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -3,6 +3,7 @@
 :root {
   --primaryColor: #3cb878;
   --primaryTrans: #3cb878bb;
+  --primaryMuted: #74d2a2;
   --mainWhite: #fff;
   --offWhite: #f7f7f7;
   --mainBlack: #222;
